--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ image = "0.25"
 open = "5"
 ureq = "2"
 base64 = "0.22"
+axum = "0.7"
+tower-http = { version = "0.5", features = ["cors"] }
 
 [features]
 default = ["custom-protocol"]
