feat: export, play all, shuffle library, fix playlist import, missing file indicators, band ui update, handle 120k+ midi files, fix bugs

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tower-http = { version = "0.5", features = ["cors"] }
 zip = "2"
 log = "0.4"
 simplelog = "0.12"
+rayon = "1.10"
 
 [features]
 default = ["custom-protocol"]
