--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "tauri": "tauri",
     "tauri-dev": "tauri dev",
     "tauri-build": "tauri build"
@@ -21,7 +24,10 @@
     "postcss": "^8.5.6",
     "svelte": "^5.43.14",
     "tailwindcss": "^3.4.14",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^1.6.2",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/svelte": "^4.6.0"
   },
   "peerDependencies": {
     "typescript": "^5"
