use bun in ci (rust-already-uses)

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,10 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - run: npm ci --ignore-scripts
-      - run: npm run test:coverage
-      - run: npm run coverage:check
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install --frozen-lockfile --ignore-scripts
+      - run: bun run test:coverage
+      - run: bun run coverage:check
